Se modifica la descripción

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
       <meta charset="UTF-8" />
-      <meta name="description" content="Esta pagina te mostrara los resultados de la NBA"/>
+      <meta name="description" content="Esta pagina te mostrara la lista del mercado"/>
       <meta name="robots" content="index,follow"/>
       <title>Mercado</title>
       <meta name="viewport" content="width=device-width, inictial-scale=1.0"/>
