Se agrega un vides

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 <body>
     <main>
         <section>
-           <figure>
-            <img src="./imagenes/pexels-caio-69371 (2)-min.jpg" 
-            alt="Esa una imagen de un perrito">
-           </figure>
+           <video  controls preload="auto">
+            <source src="./imagenes/video1.mp4#t=2,6"/>
+        
+        </video>
         </section>
     </main>
     
 </body>
-</html>
