--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
 </head>
 <body>
     <main>
-        <section>
-           <video  controls preload="auto">
-            <source src="./imagenes/video1.mp4#t=2,6"/>
-        
-        </video>
-        </section>
+        <form action="">
+            <label for="nombre">
+                <span>¿Cúal es tu nombre?</span>
+                <input type="text" id="nombre"  placeholder="Tu nombre" />
+            </label>
+            <label for="inicio-platzi">
+                <span>¿Qué día comenzaste clase en Platzi?</span>
+                <input type="date" id="inicio-platzi" />
+            </label>
+            <label for="horario">
+                <span>¿En que horario estudias?</span>
+                <input type="time" id="horario" />
+            </label>
+        </form>
     </main>
     
 </body>
