--- a/index.html
+++ b/index.html
@@ -3,23 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imagenes</title>
+    <title>Calendario</title>
 </head>
 <body>
     <main>
         <form action="">
-            <label for="nombre">
-                <span>¿Cúal es tu nombre?</span>
-                <input type="text" id="nombre"  placeholder="Tu nombre" />
+            <label for="hora">
+                <span>Hora</span>
+                <input type="time" id="hora" name="hora"/>
             </label>
-            <label for="inicio-platzi">
-                <span>¿Qué día comenzaste clase en Platzi?</span>
-                <input type="date" id="inicio-platzi" />
+            <label for="dia">
+                <span>Día</span>
+                <input type="date" id="dia" name="dia"/>
             </label>
-            <label for="horario">
-                <span>¿En que horario estudias?</span>
-                <input type="time" id="horario" />
+            <label for="semana">
+                <span>Semana</span>
+                <input type="week" id="semana" name="semana"/>
             </label>
+            <label for="mes">
+                <span>Mes</span>
+                <input type="month" id="mes" name="mes"/>
+            </label>
+            <input type="submit">
+         
         </form>
     </main>
     
