--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Calendario</title>
 </head>
 <body>
-    <main>
+   <!-- <main>
         <form action="">
             <label for="hora">
                 <span>Hora</span>
@@ -26,6 +26,13 @@
             </label>
             <input type="submit">
          
+        </form> -->
+        <form action="">
+            <label for="calendario">
+                <span>Calendario</span>
+                <input type="datetime-local" id="calendario" name="calendario">
+            </label>
+            <input type="submit">
         </form>
     </main>
     
