--- a/index.html
+++ b/index.html
@@ -7,21 +7,12 @@
 </head>
 <body>
     <main>
-         <!-- Forma mas engorrosa para el usuario al hacer select
-             <select name="Cursos" id="">
-            <option value="JavaScript">JavaScript</option>
-            <option value="HTML5">HTML5</option>
-            <option value="CSS3">CSS3</option>
-            <option value="Web Standards">Web Standards</option>
-        </select> -->
-        <input list="Cursos">
-        <datalist id="Cursos">
-            <option value="Javascript"></option>
-            <option value="HTML5"></option>
-            <option value="CSS3"></option>
-            <option value="Web standards"></option>
-        </datalist>
+        <input type="submit" value="Nombre">
+
+        <button type="submit">¿Qué color te gusta? </buttontype></button>
      
+     <!-- input sirve para enviar la información en los formularios
+          button es para personalizar botones.  -->
     </main>
     
 </body>
