--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
-<html lang="es">
-  <head>
-      <meta charset="UTF-8" />
-      <meta name="description" content="Esta pagina te mostrara la lista del mercado"/>
-      <meta name="robots" content="index,follow"/>
-      <title>Modelo de caja</title>
-      <meta name="viewport" content="width=device-width, inictial-scale=1.0"/>
-      <link rel="stylesheet" href="./css/styles.css"/>
+<html lan="en">
+    <head>
+        <meta cherset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Herencia</title>
+        <link rel="stylesheet" href="./css/styles.css">
+    </head>
+    <body>
+        <main>
+            <h1>Soy un titilo</h1>
+            <p>Soy un parrafo</p>
+        </main>
+        
+    </body>
 
-  </head>
-  <body> 
-      <main>
-          <section>
-              <h1>Soy un titulo</h1>
-              <div>
-                  <p>Soy un parrafo</p>
-              </div>
-          </section>
-      </main>
-  </body>
 </html>
