--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html lan="en">
-    <head>
-        <meta cherset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Herencia</title>
-        <link rel="stylesheet" href="./css/styles.css">
-    </head>
+<html lang="en">
+<head>
+    <meta cherset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Demo</title>
+    <link rel="stylesheet" href="./css/styles.css">
+</head>
     <body>
-        <main>
-            <h1>Soy un titilo</h1>
-            <p>Soy un parrafo</p>
-        </main>
+       <header class="page-header">
+           <h1 id="page-title" class="title">Empresa</h1>
+           <nav>
+               <ul id="main-nav" class="nav">
+                   <li><a href="">Home</a></li>
+                   <li><a href="">Cursos</a></li>
+                   <li><a href="">Instrutores</a></li>
+                   <li><a href="">Blog</a></li>
+               </ul>
+            </nav>
+       </header>
         
     </body>
 
